<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rf_gz</name>
  <version>0.1.0</version>
  <description>Modular RF simulation framework for Gazebo</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>gz_sim_vendor</depend>
  <depend>gz_msgs_vendor</depend>
  <depend>rclcpp</depend>
  <depend>rf_msgs</depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>rf_agent_bringup</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
