<?xml version="1.0"?>
<?model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>uhd_usrp</name>
  <version>0.0.1</version>
  <description>UHD USRP hardware driver — publishes IQ samples from USRP devices</description>
  <maintainer email="todo@todo.com">todo</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rf_msgs</depend>
  <depend>rclpy</depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-uhd</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>